Refs #3123: Fixes parsing boolean attributes and trims strings before parsing them.